--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,12 @@
   position: relative;
 
 }
+
+.map{
+  height: 50vh;
+  width: 450px;
+  border: 5px white solid;
+  position: relative;
+  top:65%;
+  right: 30%;
+}
